common/src/snapshots/common__game__tests__game_setup_and_round_end-3.snap
---
source: common/src/game.rs
expression: game
---
secret_key: mysecretkey
players:
  p2:
    id: p2
    encrypted_hand: KBBbNhQTW0FbXFAWBwwVBxc0GyZSC0MAX1JeRBgYBRZRUVs7GVAMHwMUUEpJGw0OBg5bZUVMPA==
    num_cards: 0
    role: Player
  p1:
    id: p1
    encrypted_hand: KBBbNgwTD0UBXxsUCRkfHBc0GyZKCxcGB1EVRhYNDw1RUVs8BERXVBpRTwUJDQNbSVpKIjU=
    num_cards: 0
    role: Leader
curr_round: 1
trump: heart
player_order:
  - p1
  - p2
curr_played_cards: []
curr_player_turn: p2
curr_winning_card: ~
curr_dealer: p1
bids:
  p2: 0
  p1: 0
bid_order:
  - - p2
    - 0
  - - p1
    - 0
wins:
  p2: 0
  p1: 0
score:
  p2: 0
  p1: 0
gameplay_state:
  Play:
    hand_num: 1
event_log:
  - username: p1
    message:
      action: startgame
    timestamp: "2024-07-09T02:21:36.361012Z"
  - username: p2
    message:
      action:
        bid: 0
    timestamp: "2024-07-09T02:21:36.422177Z"
  - username: p1
    message:
      action:
        bid: 0
    timestamp: "2024-07-09T02:21:36.466649Z"
system_status: []
