common/src/snapshots/common__game__tests__game_setup_and_round_end.snap
---
source: common/src/game.rs
expression: game
---
setup_game_options:
  rounds: 5
  deterministic: true
secret_key: mysecretkey
players:
  p2:
    id: p2
    encrypted_hand: "[encrypted_hand]"
    num_cards: 0
    role: Player
  p1:
    id: p1
    encrypted_hand: "[encrypted_hand]"
    num_cards: 0
    role: Leader
curr_round: 1
trump: heart
player_order:
  - p2
  - p1
curr_played_cards: []
curr_player_turn: p1
curr_winning_card: ~
curr_dealer: p2
bids:
  p1: 0
  p2: 0
bid_order:
  - - p1
    - 0
  - - p2
    - 0
wins:
  p2: 0
  p1: 0
score:
  p2: 0
  p1: 0
gameplay_state:
  Play:
    hand_num: 1
event_log:
  - "[event_log]"
  - "[event_log]"
  - "[event_log]"
system_status: []
