common/src/snapshots/common__game__tests__start_round3-4.snap
---
source: common/src/game.rs
expression: game
---
lobby_code: lobby
setup_game_options:
  rounds: "[sgo]"
  deterministic: "[sgo]"
  start_round: "[sgo]"
  max_players: "[sgo]"
  game_mode: "[sgo]"
  visibility: "[sgo]"
  password: "[sgo]"
secret_key: mysecretkey
players:
  p1:
    id: p1
    hand:
      - id: 51
        suit: spade
        value: 14
        played_by: p1
      - id: 25
        suit: diamond
        value: 14
        played_by: p1
      - id: 50
        suit: spade
        value: 13
        played_by: p1
      - id: 24
        suit: diamond
        value: 13
        played_by: p1
    encrypted_hand: "[encrypted_hand]"
    num_cards: 0
    role: Leader
    details: "[details]"
  p2:
    id: p2
    hand:
      - id: 38
        suit: club
        value: 14
        played_by: p2
      - id: 12
        suit: heart
        value: 14
        played_by: p2
      - id: 37
        suit: club
        value: 13
        played_by: p2
      - id: 11
        suit: heart
        value: 13
        played_by: p2
    encrypted_hand: "[encrypted_hand]"
    num_cards: 0
    role: Player
    details: "[details]"
curr_round: 4
trump: diamond
player_order:
  - p1
  - p2
curr_played_cards: []
curr_player_turn: p1
curr_winning_card: ~
curr_dealer: p2
bids: {}
player_bids: []
wins:
  p1: 0
  p2: 0
score:
  p1: 0
  p2: 13
gameplay_state: Bid
event_log:
  - username: p1
    action:
      startgame:
        rounds: 5
        deterministic: true
        start_round: 3
        max_players: 4
        game_mode: Standard
        visibility: Public
        password: ~
    timestamp: "[event_timestamp]"
    lobby: lobby
  - username: p2
    action:
      bid: 3
    timestamp: "[event_timestamp]"
    lobby: lobby
  - username: p1
    action:
      bid: 1
    timestamp: "[event_timestamp]"
    lobby: lobby
  - username: p2
    action:
      playcard:
        id: 38
        suit: club
        value: 14
        played_by: p2
    timestamp: "[event_timestamp]"
    lobby: lobby
  - username: p1
    action:
      playcard:
        id: 51
        suit: spade
        value: 14
        played_by: p1
    timestamp: "[event_timestamp]"
    lobby: lobby
  - username: p2
    action: ack
    timestamp: "[event_timestamp]"
    lobby: lobby
  - username: p2
    action:
      playcard:
        id: 37
        suit: club
        value: 13
        played_by: p2
    timestamp: "[event_timestamp]"
    lobby: lobby
  - username: p1
    action:
      playcard:
        id: 25
        suit: diamond
        value: 14
        played_by: p1
    timestamp: "[event_timestamp]"
    lobby: lobby
  - username: p2
    action: ack
    timestamp: "[event_timestamp]"
    lobby: lobby
  - username: p2
    action:
      playcard:
        id: 12
        suit: heart
        value: 14
        played_by: p2
    timestamp: "[event_timestamp]"
    lobby: lobby
  - username: p1
    action:
      playcard:
        id: 50
        suit: spade
        value: 13
        played_by: p1
    timestamp: "[event_timestamp]"
    lobby: lobby
  - username: p2
    action: ack
    timestamp: "[event_timestamp]"
    lobby: lobby
  - username: p2
    action: ack
    timestamp: "[event_timestamp]"
    lobby: lobby
system_status: []
is_public: true
updated_at: "[utc]"
created_at: "[utc]"
trump_played_in_round: true
