common/src/snapshots/common__game__tests__start_round3.snap
---
source: common/src/game.rs
expression: game
---
lobby_code: lobby
setup_game_options:
  rounds: 5
  deterministic: true
  start_round: 3
  max_players: 4
  game_mode: Standard
  visibility: Public
  password: ~
secret_key: mysecretkey
players:
  p1:
    id: p1
    encrypted_hand: "[encrypted_hand]"
    num_cards: 0
    role: Leader
    details: "[details]"
  p2:
    id: p2
    encrypted_hand: "[encrypted_hand]"
    num_cards: 0
    role: Player
    details: "[details]"
curr_round: 3
trump: heart
player_order:
  - p1
  - p2
curr_played_cards: []
curr_player_turn: p2
curr_winning_card: ~
curr_dealer: p1
bids: {}
bid_order: []
wins:
  p1: 0
  p2: 0
score:
  p1: 0
  p2: 0
gameplay_state: Bid
event_log:
  - username: p1
    action:
      startgame:
        rounds: 5
        deterministic: true
        start_round: 3
        max_players: 4
        game_mode: Standard
        visibility: Public
        password: ~
    timestamp: "[event_timestamp]"
    lobby: lobby
system_status: []
is_public: true
latest_update: "2024-11-11T18:15:18.689864Z"
