common/src/snapshots/common__game__tests__take_snapshot.snap
---
source: common/src/game.rs
expression: game
---
lobby_code: lobby
setup_game_options:
  rounds: "[sgo]"
  deterministic: "[sgo]"
  start_round: "[sgo]"
  max_players: "[sgo]"
  game_mode: "[sgo]"
  visibility: "[sgo]"
  password: "[sgo]"
secret_key: mysecretkey
players:
  p1:
    id: p1
    encrypted_hand: "[encrypted_hand]"
    num_cards: 0
    role: Leader
    details: "[details]"
  p2:
    id: p2
    encrypted_hand: "[encrypted_hand]"
    num_cards: 0
    role: Player
    details: "[details]"
curr_round: 3
trump: heart
player_order:
  - p1
  - p2
curr_played_cards: []
curr_player_turn: p2
curr_winning_card: ~
curr_dealer: p1
bids: {}
player_bids: []
wins:
  p1: 0
  p2: 0
score:
  p1: 0
  p2: 0
gameplay_state: Bid
event_log:
  - "[events]"
system_status: []
is_public: true
updated_at: "[utc]"
created_at: "[utc]"
